# lds-clerkbot

./: README.md
lds-clerkbot/backend/: pyproject.toml
lds-clerkbot/backend/chroma/: chroma.sqlite3
lds-clerkbot/backend/chroma/2a6d7596-92b8-4e1d-a477-77fca49ec1cb/: index_metadata.pickle
lds-clerkbot/backend/data/: merged_handbook.md
lds-clerkbot/backend/handbook/: 0._Introductory_Overview.json  1._God’s_Plan_and_Your_Role_in_His_Work_of_Salvation_and_Exaltation.json  10._Aaronic_Priesthood_Quorums.json  11._Young_Women.json  12._Primary.json  13._Sunday_School.json  14._Single_Members.json  15._Seminaries_and_Institutes_of_Religion.json  16._Living_the_Gospel_of_Jesus_Christ.json  17._Teaching_the_Gospel.json  18._Performing_Priesthood_Ordinances_and_Blessings.json  19._Music.json  2._Supporting_Individuals_and_Families_in_God’s_Work_of_Salvation_and_Exaltation.json  20._Activities.json  21._Ministering.json  22._Providing_for_Temporal_Needs_and_Building_Self-Reliance.json  23._Sharing_the_Gospel_and_Strengthening_New_and_Returning_Members.json  24._Missionary_Recommendations_and_Service.json  25._Temple_and_Family_History_Work_in_the_Ward_and_Stake.json  26._Temple_Recommends.json  27._Temple_Ordinances_for_the_Living.json  28._Temple_Ordinances_for_the_Deceased.json  29._Meetings_in_the_Church.json  3._Priesthood_Principles.json  30._Callings_in_the_Church.json  31._Interviews_and_Other_Meetings_with_Members.json  32._Repentance_and_Church_Membership_Councils.json  33._Records_and_Reports.json  34._Finances_and_Audits.json  35._Care_and_Use_of_Meetinghouses.json  36._Creating,_Changing,_and_Naming_New_Units.json  37._Specialized_Stakes,_Wards,_and_Branches.json  38._Church_Policies_and_Guidelines.json  4._Leadership_and_Councils_in_the_Church_of_Jesus_Christ.json  5._General_and_Area_Leadership.json  6._Stake_Leadership.json  7._The_Bishopric.json  8._Elders_Quorum.json  9._Relief_Society.json  General_Handbook:_Serving_in_The_Church_of_Jesus_Christ_of_Latter-day_Saints.json  (+2 more)
lds-clerkbot/backend/notebooks/: clerk_guide.csv  crawl-tech.ipynb  questions-answers.ipynb
lds-clerkbot/backend/presentations/: lds-clerkbot.ipynb  lds-clerkbot2.ipynb
lds-clerkbot/frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  tsconfig.json
lds-clerkbot/frontend/app/: globals.css  layout.tsx
lds-clerkbot/frontend/app/components/: header.tsx
lds-clerkbot/frontend/app/components/ui/chat/chat-message/: chat-avatar.tsx
