[tool]
[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = [ "Marcus Schiesser <mail@marcusschiesser.de>" ]
readme = "README.md"

[tool.poetry.scripts]
generate = "app.engine.generate:generate_datasource"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
fastapi = "^0.109.1"
python-dotenv = "^1.0.0"
aiostream = "^0.5.2"
llama-index = "0.10.55"
cachetools = "^5.3.3"
llama-index-embeddings-mistralai = "^0.1.4"
llama-index-llms-mistralai = "^0.1.18"
llama-index-embeddings-gemini = "^0.1.8"
llama-index-llms-gemini = "^0.1.11"
groq = "^0.9.0"
transformers = "^4.43.3"
llama-index-embeddings-huggingface = "^0.2.2"
tf-keras = "^2.17.0"
ipykernel = "^6.29.5"

[tool.poetry.dependencies.uvicorn]
extras = [ "standard" ]
version = "^0.23.2"

[tool.poetry.dependencies.llama-index-vector-stores-chroma]
version = "^0.1.8"

[tool.poetry.dependencies.docx2txt]
version = "^0.8"

[tool.poetry.dependencies.llama-index-agent-openai]
version = "0.2.6"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"