[tool]
[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = [ "Marcus Schiesser <mail@marcusschiesser.de>" ]
readme = "README.md"

[tool.poetry.scripts]
generate = "app.engine.generate:generate_datasource"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
fastapi = "^0.109.1"
aiostream = "^0.5.2"
llama-index = "0.10.55"
cachetools = "^5.3.3"
tf-keras = "^2.17.0"
ipykernel = "^6.29.5"
rise = "^5.7.1"
notebook = "^7.2.1"
jupyterlab = "^4.2.4"
jupyter-contrib-nbextensions = "^0.7.0"
nbconvert = "^7.16.4"
debugpy = "^1.8.5"
python-dotenv = "^1.0.1"

[tool.poetry.dependencies.uvicorn]
extras = [ "standard" ]
version = "^0.23.2"

[tool.poetry.dependencies.llama-index-vector-stores-chroma]
version = "^0.1.8"

[tool.poetry.dependencies.docx2txt]
version = "^0.8"

[tool.poetry.dependencies.llama-index-agent-openai]
version = "0.2.6"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
jupyterlab = "^4.2.4"

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"
